# snacktech-vidsnap-lambda-notification

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/: deploy.yml  test.yml
.github/workflows/: deploy.yml  sonarqube.yml
scripts/: localstack-bootstrap-lambda.sh
src/: event.json  lambda_function.py
src/templates/: FinalizadoComErro.html  FinalizadoComSucesso.html  falha.html  sucesso.html
terraform/: data.tf  lambda.tf  permissions.tf  variables.tf
tests/: test_lambda_function.py
