[tool.poetry]
name = "snacktech-vidsnap-lambda-notification"
version = "0.1.0"
description = ""
authors = ["Rafael <rafael.dgs.1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
